First milestone for Rainback
There's a lot in this commit, primarily because I wanted to work rapidly
without needing to ensure a stable commit history. The project has matured
quickly, so I intend to keep things neater from here on. It's conceivable
that I could have coaxed these changes apart, but I'd rather just move
forward.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,9 @@ rpm: rpm.spec dist-gzip | $(RPMDIR)
 done
 .PHONY: rpm
 
+run:
+	cd src && ./rainback
+
 $(RPMDIR):
 	mkdir -p $@
 	cd $@ && mkdir -p SOURCES SPECS BUILD RPMS SRPMS
