Initial LuaFont implementation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,7 @@ rainback_LDADD = @QT_LIBS@ @LUA_CXX_LIBS@ @LUA_LIB@
 # moc-generated source files
 rainback_MOC_SOURCES = \
 	moc_Desktop.cpp \
+	moc_LuaFont.cpp \
 	moc_LuaPainter.cpp
 
 nodist_rainback_SOURCES = $(rainback_MOC_SOURCES)
@@ -12,6 +13,8 @@ nodist_rainback_SOURCES = $(rainback_MOC_SOURCES)
 rainback_SOURCES = \
 	Desktop.cpp \
 	Desktop.hpp \
+	LuaFont.hpp \
+	LuaFont.cpp \
 	LuaPainter.cpp \
 	LuaPainter.hpp \
 	main.cpp
