--- a/configure.ac
+++ b/configure.ac
@@ -2,20 +2,36 @@
 
 AC_PREREQ([2.68])
 AC_INIT([rainback], [1.0], [dafrito@gmail.com], [rainback], [http://www.dafrito.com])
+AC_SUBST([PACKAGE_RELEASE], [1])
 AM_INIT_AUTOMAKE([-Wall foreign])
-LT_PREREQ([2.2])
-LT_INIT
 AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
-# Checks for programs.
+# Check for build programs
 AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
+
+# Initialize libtool
+AM_PROG_AR
+LT_PREREQ([2.2])
+LT_INIT
 AC_PROG_LIBTOOL
 
+# Check for compiler characteristics.
+AC_HEADER_STDBOOL
+AC_TYPE_SIZE_T
+AC_LANG([C++])
+AX_CXX_COMPILE_STDCXX_11(,[AM_CXXFLAGS])
+AC_SUBST([AM_CXXFLAGS])
+
+# Check for Boost
+AX_BOOST_BASE
+AX_BOOST_UNIT_TEST_FRAMEWORK
+
+# Check for Qt
 AX_HAVE_QT_CORE
 AX_HAVE_QT_GUI
 AX_HAVE_QT_MOC
@@ -29,18 +45,6 @@ if test x"$have_qt_core" = xno || test x"$have_qt_gui" = xno || test x"$have_qt_
     AC_MSG_ERROR([Qt is required to build rainback])
 fi;
 
-# Checks for header files.
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_HEADER_STDBOOL
-AC_TYPE_SIZE_T
-
-AC_LANG([C++])
-
-AX_CXX_COMPILE_STDCXX_11(,[AM_CXXFLAGS])
-AC_SUBST([AM_CXXFLAGS])
-
-# Checks for library functions.
 
 AC_CONFIG_FILES([rainback.m4 Makefile src/Makefile tests/Makefile rpm.spec])
 AC_OUTPUT
