--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,11 @@ depcomp
 *.log
 INSTALL
 missing
-m4/**
+m4/libtool.m4
+m4/lt~obsolete.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
 aclocal.m4
 install-sh
 Makefile.in
@@ -26,6 +30,7 @@ ltmain.sh
 .libs
 Makefile
 rpm.spec
+ar-lib
 rainback.m4
 
 # Dist artifacts
@@ -34,3 +39,7 @@ rainback.m4
 
 # Qt artifacts
 moc_*
+
+# Editor artifacts
+*~
+*.swp
