--- a/rpm.spec.in
+++ b/rpm.spec.in
@@ -1,8 +1,8 @@
 Name: @PACKAGE_NAME@
 
 # Change all release values back to 1 when bumping to a new version
-Version:	1.0
-Release:	1%{?dist}
+Version:	@PACKAGE_VERSION@
+Release:	@PACKAGE_RELEASE@%{?dist}
 Summary:	TODO Add one-line summary
 
 Group:		Applications/Internet
@@ -11,8 +11,8 @@ URL:		@PACKAGE_URL@
 Source0:	@PACKAGE_NAME@-@PACKAGE_VERSION@.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 BuildArch:	@build_cpu@
-Requires:	qt
-BuildRequires: make automake autoconf libtool qt-devel
+Requires:	qt lua-cxx
+BuildRequires: make automake autoconf libtool gcc-c++ boost-test boost-devel qt-devel
 
 %description
 TODO Add longer description
@@ -29,4 +29,6 @@ make install DESTDIR=%{buildroot}
 
 %files
 %{_bindir}/@PACKAGE_NAME@
+%{_libdir}/*
+%{_includedir}/@PACKAGE_NAME@/*
 %{_datadir}/@PACKAGE_NAME@/@PACKAGE_NAME@.m4
