--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,27 +1,41 @@
-bin_PROGRAMS = rainback
-rainback_CPPFLAGS = @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @LUA_INCLUDE@
-rainback_LDADD = @QT_LIBS@ @LUA_CXX_LIBS@ @LUA_LIB@
+lib_LTLIBRARIES = librainback.la
+librainback_la_CPPFLAGS = @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @LUA_INCLUDE@ -I$(top_srcdir)/include
+librainback_la_LIBADD = @LUA_CXX_LIBS@ @QT_LIBS@ @LUA_LIB@
+librainback_la_LDFLAGS = -version-info 0:0:0
 
 # moc-generated source files
-rainback_MOC_SOURCES = \
+librainback_la_MOC_SOURCES =
 	moc_Desktop.cpp \
 	moc_LuaFont.cpp \
 	moc_LuaPainter.cpp
 
-nodist_rainback_SOURCES = $(rainback_MOC_SOURCES)
+nodist_librainback_la_SOURCES = $(librainback_la_MOC_SOURCES)
 
-rainback_SOURCES = \
+librainback_la_SOURCES = \
 	Desktop.cpp \
+	LuaFont.cpp \
+	LuaPainter.cpp
+
+pkginclude_HEADERS = \
 	Desktop.hpp \
 	LuaFont.hpp \
-	LuaFont.cpp \
-	LuaPainter.cpp \
-	LuaPainter.hpp \
+	LuaPainter.hpp
+
+bin_PROGRAMS = rainback
+rainback_CPPFLAGS = $(librainback_la_CPPFLAGS)
+rainback_LDADD = librainback.la $(librainback_la_LIBADD)
+
+rainback_SOURCES = \
 	main.cpp
 
+nodist_rainback_SOURCES = $(rainback_MOC_SOURCES)
+
 mostlyclean-local:
-	rm -f $(rainback_MOC_SOURCES)
+	rm -f $(librainback_la_MOC_SOURCES)
 .PHONY: mostlyclean-local
 
-moc_%.cpp: %.hpp
+moc_%.cpp: $(top_srcdir)/src/%.hpp
+	@QT_MOC@ -o $@ $<
+
+moc_%.cpp: $(top_srcdir)/include/%.hpp
 	@QT_MOC@ -o $@ $<
