--- a/configure.ac
+++ b/configure.ac
@@ -44,6 +44,7 @@ LUA_CXX_LIBS=`pkg-config --libs lua-cxx`
 # Check for Qt
 AX_HAVE_QT_CORE
 AX_HAVE_QT_GUI
+AX_HAVE_QT_WIDGETS
 AX_HAVE_QT_MOC
 
 if test x"$have_qt_core" = xno || test x"$have_qt_gui" = xno || test x"$have_qt_moc" = xno; then
