Simple, but smart, echo server

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,7 @@ librainback_la_LDFLAGS = -version-info 0:0:0
 
 # moc-generated source files
 librainback_la_MOC_SOURCES = \
+	protocol/moc_Human.cpp \
 	moc_Rainback.cpp \
 	moc_LuaWidget.cpp \
 	moc_LuaFont.cpp \
@@ -13,6 +14,7 @@ librainback_la_MOC_SOURCES = \
 nodist_librainback_la_SOURCES = $(librainback_la_MOC_SOURCES)
 
 librainback_la_SOURCES = \
+	protocol/Human.cpp \
 	Rainback.cpp \
 	LuaWidget.cpp \
 	LuaFont.cpp \
@@ -21,6 +23,10 @@ librainback_la_SOURCES = \
 mostlyclean-local:
 	rm -f $(librainback_la_MOC_SOURCES)
 .PHONY: mostlyclean-local
+
+protocol/moc_%.cpp: $(top_srcdir)/include/protocol/%.hpp
+	mkdir -p protocol
+	cd protocol && @QT_MOC@ -o `basename $@` ../$<
 
 moc_%.cpp: $(top_srcdir)/include/%.hpp
 	@QT_MOC@ -o $@ $<
