--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,6 +1,7 @@
 pkginclude_HEADERS = \
 	protocol/Human.hpp \
 	protocol/Pascal.hpp \
+	proxy/TCPServer.hpp \
 	Rainback.hpp \
 	LuaWidget.hpp \
 	LuaFont.hpp \
