Major refactoring to organize proxy objects

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,8 @@ librainback_la_SOURCES = \
 	protocol/Human.cpp \
 	protocol/Pascal.cpp \
 	proxy/TCPServer.cpp \
+	proxy/QObject.cpp \
+	proxy/Socket.cpp \
 	Rainback.cpp \
 	LuaWidget.cpp \
 	LuaFont.cpp \
