--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,6 +2,10 @@ pkginclude_HEADERS = \
 	protocol/Human.hpp \
 	protocol/Pascal.hpp \
 	proxy/TCPServer.hpp \
+	proxy/Pascal.hpp \
+	proxy/QObject.hpp \
+	proxy/QWidget.hpp \
+	proxy/Socket.hpp \
 	Rainback.hpp \
 	LuaWidget.hpp \
 	LuaFont.hpp \
